fixed overflow

--- a/client/Home_css/Body.css
+++ b/client/Home_css/Body.css
@@ -238,7 +238,7 @@ width: 90%;
 
 }
 
-@media only screen and (min-width:1800px){
+@media only screen and (min-width:1700px){
     
     .Body_main_div div {
         height:600px;
