--- a/client/Home_css/Home.css
+++ b/client/Home_css/Home.css
@@ -9,6 +9,8 @@
 
 @media only screen and (min-width:1100px){
     .Home_main_div{
-        width: 100vw;
+        width: calc(100vw - (100vw - 100%));
+        overflow-x: hidden;
     }
+
 }
